# serializer version: 1
# name: test_master_data[AG]
  dict({
    'applicants': list([
      dict({
        'email': 'robert13@example.org',
        'first_name': 'Ariana',
        'is_juristic_person': True,
        'juristic_name': 'Glenn and Sons',
        'last_name': 'Bell',
        'reference_number': '4954',
        'street': 'Tiffany Harbor',
        'street_number': '81008',
        'tel': '001-402-595-5969',
        'town': 'Mcbrideville',
        'zip': 9022,
      }),
    ]),
    'application_type': 'Baugesuch',
    'city': 'Aarburg',
    'completion_date': None,
    'construction_costs': 12000000,
    'construction_duration': '',
    'construction_start_date': None,
    'decision_date': datetime.date(2025, 3, 28),
    'dossier_number': '2025-1',
    'final_approval_date': None,
    'gis_coordinates': None,
    'information_of_neighbors_required': True,
    'invoice_recipients': list([
      dict({
        'email': 'bradfordcourtney@example.org',
        'first_name': 'Lori',
        'is_juristic_person': False,
        'juristic_name': None,
        'last_name': 'Patterson',
        'reference_number': '2703',
        'street': 'Weaver Ranch',
        'street_number': '780',
        'tel': '790.526.4489x879',
        'town': 'Port Amanda',
        'zip': 5502,
      }),
    ]),
    'is_paper': False,
    'is_pgv': False,
    'joined_street_and_number': True,
    'landowners': list([
      dict({
        'email': 'jennifer98@example.com',
        'first_name': 'Kelly',
        'is_juristic_person': False,
        'juristic_name': None,
        'last_name': 'Johnson',
        'reference_number': '5317',
        'street': 'Potter Street',
        'street_number': '4009',
        'tel': '800.810.7354x5230',
        'town': 'New Danielburgh',
        'zip': 6334,
      }),
    ]),
    'legal_representatives': list([
      dict({
        'email': 'oreeves@example.org',
        'first_name': 'Phillip',
        'is_juristic_person': True,
        'juristic_name': 'Sanchez Inc',
        'last_name': 'Cooper',
        'reference_number': '5895',
        'street': 'Ariana Mountains',
        'street_number': '76532',
        'tel': '689.545.5807x398',
        'town': 'New Juliemouth',
        'zip': 2234,
      }),
    ]),
    'municipality_name': 'Aarburg',
    'municipality_slug': '55',
    'nature_risk': list([
      dict({
        'risk_type': 'Hochwasser (erhebliche Gefährdung)',
      }),
      dict({
        'risk_type': 'Hochwasser (geringe Gefährdung)',
      }),
    ]),
    'organization_category': 'ebauag',
    'other_municipality_names': list([
      'Abtwil',
      'Dietwil',
    ]),
    'pgv_responsible_authority': 'Eidg. Starkstrominspektorat, Luppmenstrasse 1, 8320 Fehraltorf',
    'plot_data': list([
      dict({
        'egrid_number': 'CH270677774577',
        'plot_number': '1338',
      }),
    ]),
    'proceeding_type': 'Ordentliches Verfahren',
    'profile_approval_date': None,
    'project_authors': list([
      dict({
        'email': 'hmartinez@example.com',
        'first_name': 'Joel',
        'is_juristic_person': True,
        'juristic_name': 'Acevedo-Rosales',
        'last_name': 'Simon',
        'reference_number': '2367',
        'street': 'Dickerson Island',
        'street_number': '659',
        'tel': '603-339-0932',
        'town': 'Port Isabella',
        'zip': 8327,
      }),
    ]),
    'proposal': 'Überbauung "Westfeld"',
    'publication_date': None,
    'publication_required': True,
    'remark': 'Testdossier 1',
    'street': 'Teststrasse 12',
    'submit_date': datetime.datetime(2025, 2, 5, 9, 18, 8, tzinfo=tzutc()),
    'usage_type': None,
    'usage_zone': 'Wohnzone 2',
    'zip': '4663',
  })
# ---
# name: test_master_data[BE DE]
  dict({
    'alcohol_serving': 'mit',
    'applicants': list([
      dict({
        'first_name': 'Max',
        'is_juristic_person': True,
        'juristic_name': 'ACME AG',
        'last_name': 'Mustermann',
        'street': 'Teststrasse',
        'street_number': 123,
        'town': 'Testhausen',
        'zip': 1234,
      }),
    ]),
    'application_type': 'Baugesuch',
    'building_distances': list([
    ]),
    'building_owners': list([
      dict({
        'first_name': 'Peter',
        'is_juristic_person': False,
        'juristic_name': None,
        'last_name': 'Meier',
        'street': 'Thunstrasse',
        'street_number': 88,
        'town': 'Bern',
        'zip': 3002,
      }),
    ]),
    'city': 'Musterhausen',
    'completion_date': None,
    'conservable': dict({
      'label': 'Nein',
      'slug': 'erhaltenswert-nein',
    }),
    'construction_costs': 199000,
    'construction_duration': None,
    'construction_group': dict({
      'label': 'Ja',
      'slug': 'baugruppe-bauinventar-ja',
    }),
    'construction_group_designation': 'Test Baugruppe',
    'construction_start_date': None,
    'contract': dict({
      'label': 'Ja',
      'slug': 'vertrag-ja',
    }),
    'contract_start': datetime.date(2022, 2, 1),
    'decision_date': None,
    'description_modification': 'Doch eher kleines Haus',
    'development_regulations': 'Überbauung XY',
    'dimension_height': None,
    'dossier_number': '2021-1',
    'final_approval_date': None,
    'fire_protection_systems': list([
      dict({
        'new_or_existing': 'Bestehend',
        'type': 'Blitzschutzanlage',
      }),
    ]),
    'floor_area': None,
    'hazardous_substances': list([
      dict({
        'amount': 500,
        'material': 'Dynamit',
        'material_group': 'Stoffgruppe',
      }),
    ]),
    'heating_systems': list([
      dict({
        'combusitble_storage': 'Brennstofflagerung',
        'new_or_existing': 'Zustand',
        'power': 10,
        'storage_amount': 20,
        'type': 'Typ',
      }),
    ]),
    'interior_seating': list([
      dict({
        'total_seats': 20,
      }),
      dict({
        'total_seats': 15,
      }),
    ]),
    'is_paper': False,
    'joined_street_and_number': False,
    'k_object': dict({
      'label': 'Ja',
      'slug': 'k-objekt-ja',
    }),
    'landowners': list([
      dict({
        'first_name': 'Sandra',
        'is_juristic_person': False,
        'juristic_name': None,
        'last_name': 'Holzer',
        'street': 'Bernweg',
        'street_number': 12,
        'town': 'Bern',
        'zip': 3002,
      }),
    ]),
    'legal_representatives': list([
      dict({
        'first_name': None,
        'is_juristic_person': True,
        'juristic_name': 'Mustermann und Söhne AG',
        'last_name': None,
        'street': 'Juristenweg',
        'street_number': 99,
        'town': 'Bern',
        'zip': 3008,
      }),
    ]),
    'lifts': list([
      dict({
        'new_or_existing': 'Zustand',
        'system_type': 'Typ',
      }),
    ]),
    'municipality_name': 'Bern',
    'municipality_slug': '1',
    'nature_risk': list([
    ]),
    'number_of_accomodated_persons': None,
    'organization_category': 'ebaube',
    'outside_seating': 20,
    'paper_submit_date': datetime.datetime(2021, 3, 20, 13, 17, 8, tzinfo=tzutc()),
    'parking_lots': None,
    'plot_data': list([
      dict({
        'coord_east': 2599941,
        'coord_north': 1198923,
        'egrid_number': 'CH334687350542',
        'plot_number': 473,
      }),
      dict({
        'coord_east': 2601995,
        'coord_north': 1201340,
        'egrid_number': 'CH913553467614',
        'plot_number': 2592,
      }),
    ]),
    'proceeding_type': None,
    'profile_approval_date': None,
    'project': dict({
      'label': 'Neubau',
      'slug': 'baubeschrieb-neubau',
    }),
    'project_authors': list([
      dict({
        'first_name': 'Hans',
        'is_juristic_person': False,
        'juristic_name': None,
        'last_name': 'Müller',
        'street': 'Einweg',
        'street_number': 9,
        'town': 'Bern',
        'zip': 3000,
      }),
    ]),
    'proposal': 'Grosses Haus',
    'protected': dict({
      'label': 'Ja',
      'slug': 'schuetzenswert-ja',
    }),
    'protection_area': list([
      dict({
        'label': 'S1',
        'slug': 'grundwasserschutzzonen-v2-s1',
      }),
    ]),
    'public': dict({
      'label': 'Öffentlich',
      'slug': 'oeffentlichkeit-oeffentlich',
    }),
    'publication_date': None,
    'qs_responsible': list([
    ]),
    'remark': None,
    'room_occupancy_rooms_more_than_50_persons': None,
    'rooms_with_more_than_50_persons': list([
    ]),
    'rrb': dict({
      'label': 'Ja',
      'slug': 'rrb-ja',
    }),
    'rrb_start': datetime.date(2022, 1, 1),
    'situation': 'Sachverhalt Test',
    'solar_panels': list([
      dict({
        'energy_storage': 'Energiespeicherkapazität',
        'energy_storage_capacity': 3,
        'new_or_existing': 'Zustand',
        'type': 'Typ',
      }),
    ]),
    'stfv_regulation': list([
      None,
      True,
      False,
    ]),
    'stfv_regulation_gentech': list([
      None,
      False,
      True,
    ]),
    'stfv_risk_assessment': True,
    'stfv_short_report': True,
    'stfv_special_waste_exceeded': list([
      None,
      False,
      False,
    ]),
    'street': 'Musterstrasse',
    'street_number': 4,
    'submit_date': datetime.datetime(2021, 3, 31, 13, 17, 8, tzinfo=tzutc()),
    'usage_type': list([
      'Wohnen',
    ]),
    'usage_zone': 'Wohnzone W2',
    'ventilation_systems': list([
      dict({
        'air_volume': 2,
        'new_or_existing': 'Zustand',
        'system_type': 'Typ',
      }),
    ]),
    'water_protection_area': list([
      dict({
        'label': 'Aᵤ',
        'slug': 'gewaesserschutzbereich-v2-au',
      }),
    ]),
    'zip': 3000,
  })
# ---
# name: test_master_data[BE FR]
  dict({
    'alcohol_serving': 'mit',
    'applicants': list([
      dict({
        'first_name': 'Max',
        'is_juristic_person': True,
        'juristic_name': 'ACME AG',
        'last_name': 'Mustermann',
        'street': 'Teststrasse',
        'street_number': 123,
        'town': 'Testhausen',
        'zip': 1234,
      }),
    ]),
    'application_type': 'Demande de permis de construire',
    'building_distances': list([
    ]),
    'building_owners': list([
      dict({
        'first_name': 'Peter',
        'is_juristic_person': False,
        'juristic_name': None,
        'last_name': 'Meier',
        'street': 'Thunstrasse',
        'street_number': 88,
        'town': 'Bern',
        'zip': 3002,
      }),
    ]),
    'city': 'Musterhausen',
    'completion_date': None,
    'conservable': dict({
      'label': 'Nein',
      'slug': 'erhaltenswert-nein',
    }),
    'construction_costs': 199000,
    'construction_duration': None,
    'construction_group': dict({
      'label': 'Ja',
      'slug': 'baugruppe-bauinventar-ja',
    }),
    'construction_group_designation': 'Test Baugruppe',
    'construction_start_date': None,
    'contract': dict({
      'label': 'Ja',
      'slug': 'vertrag-ja',
    }),
    'contract_start': datetime.date(2022, 2, 1),
    'decision_date': None,
    'description_modification': 'Doch eher kleines Haus',
    'development_regulations': 'Überbauung XY',
    'dimension_height': None,
    'dossier_number': '2021-1',
    'final_approval_date': None,
    'fire_protection_systems': list([
      dict({
        'new_or_existing': None,
        'type': None,
      }),
    ]),
    'floor_area': None,
    'hazardous_substances': list([
      dict({
        'amount': 500,
        'material': 'Dynamit',
        'material_group': None,
      }),
    ]),
    'heating_systems': list([
      dict({
        'combusitble_storage': None,
        'new_or_existing': None,
        'power': 10,
        'storage_amount': 20,
        'type': None,
      }),
    ]),
    'interior_seating': list([
      dict({
        'total_seats': 20,
      }),
      dict({
        'total_seats': 15,
      }),
    ]),
    'is_paper': False,
    'joined_street_and_number': False,
    'k_object': dict({
      'label': 'Ja',
      'slug': 'k-objekt-ja',
    }),
    'landowners': list([
      dict({
        'first_name': 'Sandra',
        'is_juristic_person': False,
        'juristic_name': None,
        'last_name': 'Holzer',
        'street': 'Bernweg',
        'street_number': 12,
        'town': 'Bern',
        'zip': 3002,
      }),
    ]),
    'legal_representatives': list([
      dict({
        'first_name': None,
        'is_juristic_person': True,
        'juristic_name': 'Mustermann und Söhne AG',
        'last_name': None,
        'street': 'Juristenweg',
        'street_number': 99,
        'town': 'Bern',
        'zip': 3008,
      }),
    ]),
    'lifts': list([
      dict({
        'new_or_existing': None,
        'system_type': None,
      }),
    ]),
    'municipality_name': 'Berne',
    'municipality_slug': '1',
    'nature_risk': list([
    ]),
    'number_of_accomodated_persons': None,
    'organization_category': 'ebaube',
    'outside_seating': 20,
    'paper_submit_date': datetime.datetime(2021, 3, 20, 13, 17, 8, tzinfo=tzutc()),
    'parking_lots': None,
    'plot_data': list([
      dict({
        'coord_east': 2599941,
        'coord_north': 1198923,
        'egrid_number': 'CH334687350542',
        'plot_number': 473,
      }),
      dict({
        'coord_east': 2601995,
        'coord_north': 1201340,
        'egrid_number': 'CH913553467614',
        'plot_number': 2592,
      }),
    ]),
    'proceeding_type': None,
    'profile_approval_date': None,
    'project': dict({
      'label': 'Neubau',
      'slug': 'baubeschrieb-neubau',
    }),
    'project_authors': list([
      dict({
        'first_name': 'Hans',
        'is_juristic_person': False,
        'juristic_name': None,
        'last_name': 'Müller',
        'street': 'Einweg',
        'street_number': 9,
        'town': 'Bern',
        'zip': 3000,
      }),
    ]),
    'proposal': 'Grosses Haus',
    'protected': dict({
      'label': 'Ja',
      'slug': 'schuetzenswert-ja',
    }),
    'protection_area': list([
      dict({
        'label': 'S1',
        'slug': 'grundwasserschutzzonen-v2-s1',
      }),
    ]),
    'public': dict({
      'label': 'Öffentlich',
      'slug': 'oeffentlichkeit-oeffentlich',
    }),
    'publication_date': None,
    'qs_responsible': list([
    ]),
    'remark': None,
    'room_occupancy_rooms_more_than_50_persons': None,
    'rooms_with_more_than_50_persons': list([
    ]),
    'rrb': dict({
      'label': 'Ja',
      'slug': 'rrb-ja',
    }),
    'rrb_start': datetime.date(2022, 1, 1),
    'situation': 'Sachverhalt Test',
    'solar_panels': list([
      dict({
        'energy_storage': None,
        'energy_storage_capacity': 3,
        'new_or_existing': None,
        'type': None,
      }),
    ]),
    'stfv_regulation': list([
      None,
      True,
      False,
    ]),
    'stfv_regulation_gentech': list([
      None,
      False,
      True,
    ]),
    'stfv_risk_assessment': True,
    'stfv_short_report': True,
    'stfv_special_waste_exceeded': list([
      None,
      False,
      False,
    ]),
    'street': 'Musterstrasse',
    'street_number': 4,
    'submit_date': datetime.datetime(2021, 3, 31, 13, 17, 8, tzinfo=tzutc()),
    'usage_type': list([
      'Vivre',
    ]),
    'usage_zone': 'Wohnzone W2',
    'ventilation_systems': list([
      dict({
        'air_volume': 2,
        'new_or_existing': None,
        'system_type': None,
      }),
    ]),
    'water_protection_area': list([
      dict({
        'label': 'Aᵤ',
        'slug': 'gewaesserschutzbereich-v2-au',
      }),
    ]),
    'zip': 3000,
  })
# ---
# name: test_master_data[SG]
  dict({
    'applicants': list([
      dict({
        'country': 'Schweiz',
        'country_code': 'CH',
        'email': 'millerchristopher@example.com',
        'first_name': 'Andrea',
        'is_juristic_person': False,
        'juristic_name': None,
        'last_name': 'Williams',
        'po_box': '1206',
        'street': '3508 Mario Square Apt. 033',
        'tel': '950-869-7580x04027',
        'town': 'Grayburgh',
        'zip': '9176',
      }),
    ]),
    'decision_date': datetime.date(2026, 5, 18),
    'dossier_number': '2026-99',
    'information_of_neighbors_required': False,
    'joined_street_and_number': True,
    'landowners': list([
      dict({
        'country': 'Schweiz',
        'country_code': 'CH',
        'email': 'jacob96@example.net',
        'first_name': 'Jennifer',
        'is_juristic_person': False,
        'juristic_name': None,
        'last_name': 'Bell',
        'po_box': '2241',
        'street': '1785 Murray Squares Suite 534',
        'tel': '(209)444-2818x60272',
        'town': 'West Douglasfort',
        'zip': '8787',
      }),
      dict({
        'country': 'Schweiz',
        'country_code': 'CH',
        'email': 'kbrewer@example.net',
        'first_name': 'Stephanie',
        'is_juristic_person': True,
        'juristic_name': 'Fields-Calderon',
        'last_name': 'Lawrence',
        'po_box': '9468',
        'street': '637 Schwartz Place Apt. 839',
        'tel': '(259)398-5409',
        'town': 'Aaronmouth',
        'zip': '6456',
      }),
    ]),
    'municipality_name': 'St.Gallen',
    'municipality_slug': '999',
    'plot_data': list([
      dict({
        'coord_east': 2746641.47,
        'coord_north': 1254612.15,
        'egrid_number': None,
        'plot_number': 'C3111',
      }),
    ]),
    'project_authors': list([
      dict({
        'country': 'Schweiz',
        'country_code': 'CH',
        'email': 'brendawall@example.com',
        'first_name': 'Karen',
        'is_juristic_person': True,
        'juristic_name': 'Lopez-Perez',
        'last_name': 'Hawkins',
        'po_box': '8180',
        'street': '620 Morton Cliffs',
        'tel': '+1-484-281-6688x486',
        'town': 'Lake Christinaburgh',
        'zip': '7799',
      }),
    ]),
    'proposal': 'Neues EFH',
    'publication_required': False,
    'street': 'Lämmlisbrunnenstrasse 54',
    'submit_date': datetime.datetime(2026, 3, 19, 17, 32, 18, tzinfo=tzutc()),
  })
# ---
# name: test_master_data[SO]
  dict({
    'applicants': list([
      dict({
        'country': 'Schweiz',
        'country_code': 'CH',
        'email': 'michaeljones@example.com',
        'first_name': 'Jesse',
        'has_representative': True,
        'is_juristic_person': True,
        'juristic_name': 'Hayden PLC',
        'last_name': 'Boyd',
        'po_box': '5053',
        'representative_country': 'Schweiz',
        'representative_country_code': 'CH',
        'representative_email': 'cbrown@example.com',
        'representative_first_name': 'Lori',
        'representative_is_juristic_person': False,
        'representative_juristic_name': None,
        'representative_last_name': 'Delgado',
        'representative_po_box': '3624',
        'representative_salutation': 'Frau',
        'representative_street': 'Jimenez Hill',
        'representative_street_number': '556',
        'representative_tel': '+1-578-513-8485x9828',
        'representative_title': 'Mrs.',
        'representative_town': 'South Oscar',
        'representative_zip': 6469,
        'salutation': 'Herr',
        'street': 'Julie Field',
        'street_number': '719',
        'tel': '(265)470-8100x887',
        'title': 'Mr.',
        'town': 'New Jeffrey',
        'zip': '1330',
      }),
    ]),
    'application_type': 'Baugesuch',
    'bab_approval_authority': 'örtliche Baubehörde',
    'bab_checklist_bab_so_according_to_rpg': list([
      'A1 - standortgebunden',
      'A2 - Weilerzone',
    ]),
    'bab_construction_zone': 'ausserhalb',
    'bab_date_of_receipt_arp': datetime.date(2025, 2, 13),
    'bab_deadline_at_recording': datetime.date(2023, 1, 2),
    'bab_decision_canton': 'Ablehnung',
    'bab_decision_date_canton': datetime.date(2025, 7, 8),
    'bab_decision_opening_type_canton': 'E-Mail',
    'bab_interest_in_project': 'privat',
    'bab_journal': list([
      dict({
        'date': '7. Mai 2024',
        'date_timestamp': '2024-05-07',
        'facts': 'Sachverhalt',
        'involved': 'Beteiligte Anwesende',
        'type': 'Info',
      }),
    ]),
    'bab_municipality_number_cantonal_arp': '1234',
    'bab_object_protection': 'geschützt',
    'bab_procedure_status': 'Entscheid',
    'bab_processing_status': 'in Bearbeitung',
    'bab_protected_objects': list([
      dict({
        'authority': 'kantonal',
        'decision_date': '1. Dezember 2001',
        'decision_number': 'Beschlussnummer',
        'description': 'Bezeichnung',
        'disposition_date': '1. September 1999',
      }),
    ]),
    'bab_relevant_deadline': datetime.date(2023, 1, 5),
    'bab_suspensions': list([
      dict({
        'end': '10. Januar 2020',
        'end_timestamp': '2020-01-10',
        'reason': 'rechtliches Gehör',
        'start': '1. Januar 2020',
        'start_timestamp': '2020-01-01',
      }),
    ]),
    'bfs_number': None,
    'buildings': list([
      dict({
        'building_category': 1060,
        'egid': 1234,
        'name': 'Villa',
        'proposal': list([
          6001,
        ]),
      }),
    ]),
    'category': list([
      6011,
      6010,
    ]),
    'city': 'Musterdorf',
    'civil_engineering': list([
      dict({
        'is_parking_lot': True,
      }),
      dict({
        'is_parking_lot': False,
      }),
    ]),
    'completion_date': None,
    'construction_costs': 129000,
    'construction_duration': 18,
    'construction_start_date': None,
    'decision_date': datetime.date(2025, 3, 26),
    'dossier_number': '2601-2024-1',
    'dwellings': list([
      dict({
        'area': '420',
        'floor_number': '2',
        'floor_type': 3101,
        'has_kitchen_facilities': True,
        'kitchen_facilities': 'kocheinrichtung-kochnische-greater-4-m2',
        'location_on_floor': 'Süd',
        'multiple_floors': True,
        'name_of_building': 'Villa',
        'number_of_rooms': '20',
        'usage_limitation': 3401,
      }),
      dict({
        'area': '72',
        'floor_number': None,
        'floor_type': 3100,
        'has_kitchen_facilities': False,
        'kitchen_facilities': 'kocheinrichtung-keine-kocheinrichtung',
        'location_on_floor': 'Nord',
        'multiple_floors': False,
        'name_of_building': 'Villa',
        'number_of_rooms': '10',
        'usage_limitation': 3402,
      }),
    ]),
    'energy_devices': list([
      dict({
        'energy_source': 7511,
        'information_source': 869,
        'is_heating': False,
        'is_heating_and_warm_water': True,
        'is_main_heating': True,
        'is_warm_water': False,
        'name_of_building': 'Villa',
        'type': 'anlagetyp-heizung-und-warmwasseraufbereitung',
      }),
      dict({
        'energy_source': 7570,
        'information_source': 869,
        'is_heating': True,
        'is_heating_and_warm_water': False,
        'is_main_heating': False,
        'is_warm_water': False,
        'name_of_building': 'Villa',
        'type': 'anlagetyp-hauptheizung',
      }),
      dict({
        'energy_source': 7580,
        'information_source': 869,
        'is_heating': False,
        'is_heating_and_warm_water': False,
        'is_main_heating': False,
        'is_warm_water': True,
        'name_of_building': 'Villa',
        'type': 'anlagetyp-warmwasser',
      }),
    ]),
    'final_approval_date': None,
    'geometer_required': None,
    'invoice_recipients': list([
      dict({
        'country': 'Schweiz',
        'country_code': 'CH',
        'email': 'rachael00@example.net',
        'first_name': 'Stacey',
        'has_representative': False,
        'is_juristic_person': False,
        'juristic_name': None,
        'last_name': 'Davis',
        'po_box': '5439',
        'representative_country': None,
        'representative_country_code': 'CH',
        'representative_email': None,
        'representative_first_name': None,
        'representative_is_juristic_person': None,
        'representative_juristic_name': None,
        'representative_last_name': None,
        'representative_po_box': None,
        'representative_salutation': None,
        'representative_street': None,
        'representative_street_number': None,
        'representative_tel': None,
        'representative_title': None,
        'representative_town': None,
        'representative_zip': None,
        'salutation': 'Frau',
        'street': 'Tiffany Coves',
        'street_number': '6325',
        'tel': '001-698-538-6417',
        'title': 'Mrs.',
        'town': 'Lake Maryport',
        'zip': '4072',
      }),
    ]),
    'is_bab': True,
    'is_bab_location': True,
    'is_bab_temporary': False,
    'is_paper': False,
    'joined_street_and_number': False,
    'land_use_additional_determinations': None,
    'land_use_planning_land_use': 'Wohnzone 3 - AZ 0.6',
    'land_use_planning_land_use_canton': 'N112_Wohnzone_3_G',
    'landowners': list([
      dict({
        'country': 'Schweiz',
        'country_code': 'CH',
        'email': 'whawkins@example.org',
        'first_name': 'Brandon',
        'has_representative': True,
        'is_juristic_person': False,
        'juristic_name': None,
        'last_name': 'Adams',
        'po_box': '9616',
        'representative_country': 'Schweiz',
        'representative_country_code': 'CH',
        'representative_email': 'alexanderhamilton@example.net',
        'representative_first_name': 'Timothy',
        'representative_is_juristic_person': True,
        'representative_juristic_name': 'West, Foster and Duncan',
        'representative_last_name': 'Carter',
        'representative_po_box': '2119',
        'representative_salutation': 'Herr',
        'representative_street': 'Boyd Vista',
        'representative_street_number': '66884',
        'representative_tel': '847.346.8179',
        'representative_title': 'Dr.',
        'representative_town': 'Pierceshire',
        'representative_zip': 9764,
        'salutation': 'Herr',
        'street': 'Stephanie Summit',
        'street_number': '221',
        'tel': '462-504-1619',
        'title': 'Dr.',
        'town': 'Cookstad',
        'zip': '7985',
      }),
    ]),
    'legal_representatives': list([
    ]),
    'municipality_name': 'Solothurn',
    'municipality_slug': '1',
    'national_inventory': None,
    'nature_risk': list([
      dict({
        'risk_type': 'Murgang',
      }),
    ]),
    'organization_category': 'ebauso',
    'plot_data': list([
      dict({
        'coord_east': 2690970.9,
        'coord_north': 1192891.9,
        'egrid_number': 'CH123456789',
        'plot_number': 123456789,
        'zip': '4500',
      }),
    ]),
    'proceeding_type': None,
    'profile_approval_date': None,
    'project_authors': list([
      dict({
        'country': 'Schweiz',
        'country_code': 'CH',
        'email': 'timothy82@example.net',
        'first_name': 'Debra',
        'has_representative': False,
        'is_juristic_person': False,
        'juristic_name': None,
        'last_name': 'Barnett',
        'po_box': '9562',
        'representative_country': None,
        'representative_country_code': 'CH',
        'representative_email': None,
        'representative_first_name': None,
        'representative_is_juristic_person': None,
        'representative_juristic_name': None,
        'representative_last_name': None,
        'representative_po_box': None,
        'representative_salutation': None,
        'representative_street': None,
        'representative_street_number': None,
        'representative_tel': None,
        'representative_title': None,
        'representative_town': None,
        'representative_zip': None,
        'salutation': 'Frau',
        'street': 'Wise Parkways',
        'street_number': '14357',
        'tel': '480-882-4428',
        'title': 'Mrs.',
        'town': 'Robertsside',
        'zip': '4992',
      }),
    ]),
    'proposal': 'Grosses Haus',
    'publication_date': None,
    'remark': 'Das Haus ist wirklich gross..',
    'short_proposal': None,
    'street': 'Musterstrasse',
    'street_number': '4',
    'submit_date': datetime.datetime(2024, 2, 22, 13, 17, 8, tzinfo=tzutc()),
    'type_of_construction': list([
      dict({
        'art_der_hochbaute': 6235,
      }),
    ]),
    'usage_type': 'Wohnen',
    'usage_zone': 'Wohnzone 3 - AZ 0.6',
    'zip': '1234',
  })
# ---
# name: test_master_data[SZ GWR v1]
  dict({
    'applicants': list([
      dict({
        'company': 'ACME AG',
        'country': 'Schweiz',
        'email': None,
        'first_name': 'Max',
        'is_juristic_person': False,
        'juristic_name': 'ACME AG',
        'last_name': 'Mustermann',
        'phone': None,
        'street': 'Teststrasse 3',
        'town': 'Musterdorf',
        'zip': 5678,
      }),
    ]),
    'application_type': 'Elizabeth Garcia',
    'application_type_migrated': None,
    'building_category': None,
    'building_owners': list([
      dict({
        'company': 'ACME AG',
        'country': 'Schweiz',
        'email': None,
        'first_name': 'Max',
        'is_juristic_person': False,
        'juristic_name': 'ACME AG',
        'last_name': 'Mustermann',
        'phone': None,
        'street': 'Teststrasse 3',
        'town': 'Musterdorf',
        'zip': 5678,
      }),
    ]),
    'buildings': list([
      dict({
        'building_category': 1060,
        'civil_defense_shelter': None,
        'dwellings': list([
          dict({
            'area': 42,
            'has_kitchen_facilities': True,
            'kitchen_facilities': 'Kochnische (unter 4m²)',
            'location_on_floor': 'Nord',
            'multiple_floors': True,
            'number_of_rooms': 4,
          }),
        ]),
        'heating_energy_source': 7540,
        'heating_heat_generator': 7436,
        'name': None,
        'number_of_floors': 2,
        'number_of_rooms': None,
        'warmwater_energy_source': 7560,
        'warmwater_heat_generator': None,
      }),
    ]),
    'circulation_start': None,
    'city': None,
    'completion_date': None,
    'construction_costs': 129000,
    'construction_duration': None,
    'construction_start_date': None,
    'coordinates': list([
      list([
        dict({
          'lat': 47.175669937318816,
          'lng': 8.8984885140077,
        }),
        dict({
          'lat': 47.03185841071765,
          'lng': 8.622585392467867,
        }),
      ]),
      list([
        dict({
          'lat': 47.03185841071765,
          'lng': 8.622585392467867,
        }),
      ]),
    ]),
    'decision_date': None,
    'dossier_number': None,
    'energy_pv_total_power': None,
    'final_approval_date': None,
    'instance_complete': None,
    'joined_street_and_number': True,
    'landowners': list([
    ]),
    'legal_representatives': list([
    ]),
    'location_coordinates': '''
      2693525; 1210987
  
    ''',
    'municipality_name': 'Schübelbach',
    'municipality_slug': 999,
    'nature_risk': list([
    ]),
    'organization_category': 'ebausz',
    'plot_data': list([
      dict({
        'egrid_number': 'CH1234567890',
        'plot_number': 1234,
      }),
    ]),
    'proceeding_type': None,
    'profile_approval_date': None,
    'project_authors': list([
    ]),
    'proposal': 'Grosses Haus',
    'publication_date': None,
    'remark': None,
    'street': None,
    'street_addition': None,
    'submit_date': None,
    'usage_type': None,
    'usage_zone': None,
    'zip': None,
  })
# ---
# name: test_master_data[SZ GWR v2]
  dict({
    'applicants': list([
      dict({
        'company': 'ACME AG',
        'country': 'Schweiz',
        'email': None,
        'first_name': 'Max',
        'is_juristic_person': False,
        'juristic_name': 'ACME AG',
        'last_name': 'Mustermann',
        'phone': None,
        'street': 'Teststrasse 3',
        'town': 'Musterdorf',
        'zip': 5678,
      }),
    ]),
    'application_type': 'Elizabeth Garcia',
    'application_type_migrated': None,
    'building_category': None,
    'building_owners': list([
      dict({
        'company': 'ACME AG',
        'country': 'Schweiz',
        'email': None,
        'first_name': 'Max',
        'is_juristic_person': False,
        'juristic_name': 'ACME AG',
        'last_name': 'Mustermann',
        'phone': None,
        'street': 'Teststrasse 3',
        'town': 'Musterdorf',
        'zip': 5678,
      }),
    ]),
    'buildings': list([
      dict({
        'building_category': 1020,
        'civil_defense_shelter': True,
        'dwellings': list([
          dict({
            'area': 70,
            'has_kitchen_facilities': True,
            'kitchen_facilities': None,
            'location_on_floor': 'West',
            'multiple_floors': False,
            'number_of_rooms': 2,
          }),
          dict({
            'area': 24,
            'has_kitchen_facilities': False,
            'kitchen_facilities': None,
            'location_on_floor': 'Ost',
            'multiple_floors': False,
            'number_of_rooms': 3,
          }),
        ]),
        'heating_energy_source': 7510,
        'heating_heat_generator': 7411,
        'name': 'Grosses Haus',
        'number_of_floors': 4,
        'number_of_rooms': 24,
        'warmwater_energy_source': 7570,
        'warmwater_heat_generator': 7650,
      }),
    ]),
    'circulation_start': None,
    'city': None,
    'completion_date': None,
    'construction_costs': 129000,
    'construction_duration': None,
    'construction_start_date': None,
    'coordinates': list([
      list([
        dict({
          'lat': 47.175669937318816,
          'lng': 8.8984885140077,
        }),
        dict({
          'lat': 47.03185841071765,
          'lng': 8.622585392467867,
        }),
      ]),
      list([
        dict({
          'lat': 47.03185841071765,
          'lng': 8.622585392467867,
        }),
      ]),
    ]),
    'decision_date': None,
    'dossier_number': None,
    'energy_pv_total_power': None,
    'final_approval_date': None,
    'instance_complete': None,
    'joined_street_and_number': True,
    'landowners': list([
    ]),
    'legal_representatives': list([
    ]),
    'location_coordinates': '''
      2693525; 1210987
  
    ''',
    'municipality_name': 'Schübelbach',
    'municipality_slug': 999,
    'nature_risk': list([
    ]),
    'organization_category': 'ebausz',
    'plot_data': list([
      dict({
        'egrid_number': 'CH1234567890',
        'plot_number': 1234,
      }),
    ]),
    'proceeding_type': None,
    'profile_approval_date': None,
    'project_authors': list([
    ]),
    'proposal': 'Grosses Haus',
    'publication_date': None,
    'remark': None,
    'street': None,
    'street_addition': None,
    'submit_date': None,
    'usage_type': None,
    'usage_zone': None,
    'zip': None,
  })
# ---
# name: test_master_data[UR]
  dict({
    'applicants': list([
      dict({
        'country': 'Schweiz',
        'first_name': 'Max',
        'is_juristic_person': True,
        'juristic_name': 'ACME AG',
        'last_name': 'Mustermann',
        'street': 'Teststrasse',
        'street_number': 123,
        'town': 'Musterdorf',
        'zip': 1233,
      }),
    ]),
    'approval_reason': '5031',
    'authority': dict({
      'label': 'Leitbehörde Altdorf',
      'slug': '1',
    }),
    'buildings': list([
      dict({
        'building_category': 1060,
        'name': 'Villa',
        'proposal': list([
          6001,
        ]),
      }),
    ]),
    'category': list([
      6011,
      6010,
    ]),
    'city': 'Musterdorf',
    'construction_costs': 129000,
    'construction_end_date': datetime.datetime(2021, 7, 30, 8, 0, 6, tzinfo=datetime.timezone.utc),
    'construction_start_date': datetime.datetime(2021, 7, 25, 8, 0, 6, tzinfo=datetime.timezone.utc),
    'decision_date': datetime.datetime(2021, 7, 20, 8, 0, 6, tzinfo=datetime.timezone.utc),
    'dossier_number': '1201-21-003',
    'dwellings': list([
      dict({
        'area': '420',
        'floor_number': '2',
        'floor_type': 3101,
        'has_kitchen_facilities': True,
        'kitchen_facilities': 'kocheinrichtung-kochnische-greater-4-m2',
        'location_on_floor': 'Süd',
        'multiple_floors': True,
        'name_of_building': 'Villa',
        'number_of_rooms': '20',
        'usage_limitation': 3401,
      }),
      dict({
        'area': '72',
        'floor_number': None,
        'floor_type': 3100,
        'has_kitchen_facilities': False,
        'kitchen_facilities': 'kocheinrichtung-keine-kocheinrichtung',
        'location_on_floor': 'Nord',
        'multiple_floors': False,
        'name_of_building': 'Villa',
        'number_of_rooms': '10',
        'usage_limitation': 3402,
      }),
    ]),
    'energy_devices': list([
      dict({
        'energy_source': 7570,
        'information_source': 869,
        'is_heating': True,
        'is_main_heating': True,
        'is_warm_water': False,
        'name_of_building': 'Villa',
        'type': 'anlagetyp-hauptheizung',
      }),
    ]),
    'form_type': 'form-type-oereb',
    'joined_street_and_number': False,
    'land_use': 'Zone 123',
    'landowners': list([
    ]),
    'legal_state': list([
      'typ-des-verfahrens-genehmigung',
    ]),
    'leitbehoerde_internal_form': None,
    'municipality_name': 'Altdorf',
    'municipality_slug': '1',
    'oereb_topic': list([
      'oereb-thema-knp',
    ]),
    'overlayed_land_use': 'Wasserzone',
    'plot_data': list([
      dict({
        'coordinates_east': 2690970.9,
        'coordinates_north': 1192891.9,
        'egrid_number': 'CH123456789',
        'origin_of_coordinates': 901,
        'plot_number': 123456789,
      }),
    ]),
    'project_authors': list([
    ]),
    'proposal': 'Grosses Haus',
    'protected': 'Altes Haus',
    'street': 'Musterstrasse',
    'street_number': 4,
    'submit_date': datetime.datetime(2021, 7, 16, 8, 0, 6, tzinfo=datetime.timezone.utc),
    'type_of_applicant': '6141',
    'type_of_construction': list([
      dict({
        'art_der_hochbaute': 6235,
      }),
    ]),
    'veranstaltung_art': list([
      'veranstaltung-art-umbau',
    ]),
  })
# ---
# name: test_master_data_api[query0-200-Municipality]
  dict({
    'some_other_property': 'Bar',
    'some_property': 'Foo',
  })
# ---
# name: test_master_data_api[query1-200-Municipality]
  dict({
    'some_property': 'Foo',
  })
# ---
# name: test_master_data_api[query2-400-Municipality]
  list([
    "Key 'not_configured' is not configured in master data config. Available keys are: some_property, some_other_property",
  ])
# ---
# name: test_master_data_parsers
  dict({
    'date': datetime.date(2021, 8, 18),
    'datetime': datetime.datetime(2021, 8, 18, 6, 58, 8, 397000, tzinfo=tzutc()),
    'my_values': list([
      dict({
        'my_list': list([
          dict({
            'my_list_value': 11,
          }),
          dict({
            'my_list_value': 12,
          }),
        ]),
        'my_static_value': 3.14,
        'my_value': 10,
      }),
    ]),
    'static_value': 'some-value',
    'success': True,
  })
# ---
